--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 /dist/* linguist-generated=true
-*.d.ts linguist-language=TypeScript -linguist-vendored
+*.d.ts linguist-language=TypeScript linguist-vendored=false
