--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
    "name": "browser-zoom-listener",
-   "version": "1.0.0",
+   "version": "1.1.0",
    "description": "Listen to window zoom changes",
-   
    "homepage": "https://github.com/coalpha/browser-zoom-listener",
    "bugs": "https://github.com/coalpha/browser-zoom-listener/issues",
    "author": "coalpha",
-
    "files": [
       "lib.ts",
       "dist/lib.cjs",
       "types/lib.cjs.d.ts"
    ],
-
    "directories": {
       "example": "example/"
    },
-
    "repository": "github:coalpha/browser-zoom-listener",
-
    "main": "dist/lib.cjs",
    "browser": "dist/lib.cjs",
+   "module": "dist/lib.mjs",
    "types": "types/lib.cjs.d.ts",
-
    "scripts": {
       "start": "rollup -c"
    },
-
    "keywords": [
       "browser",
       "devicePixelRatio",
@@ -34,9 +28,7 @@
       "listener",
       "zoom"
    ],
-
    "license": "UNLICENCED",
-
    "devDependencies": {
       "rollup": "^2.14.0",
       "rollup-plugin-terser": "^6.1.0",
